feat(backend): implement authentication
